# einkaufapp

./: .gitignore  Main.hs  TODO.md  einkaufapp.cabal  elm-package.json  index.html
static/: Main.elm  index.html
