name:          einkaufapp
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          einkaufapp
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    build-depends:  base   >= 4      && < 5
                  , scotty
                  , text
                  , aeson
                  , postgresql-simple
                  , wai-middleware-static
